Feat: Select & Insert for liveCode